fix (UI): fix layout shift in header section
Resolve layout shift in header section when switching between home and plays routes. Ensure consistent styling for main section across routes by adjusting overflow-x and min-height properties and wrapping the main tag (in Home Component) with "app-body" className.

Fix #1489

--- a/src/App.css
+++ b/src/App.css
@@ -187,6 +187,7 @@ small {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
   overflow-y: auto;
   background-color: var(--color-neutral-20);
 }
